--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ button {
     padding: 15px;
     border: none;
     border-radius: 12px;
-    background-color: green;
+    background-color: #0077DA;
     color: white;
     font-size: 17px;
     cursor: pointer;
@@ -200,20 +200,36 @@ button {
 }
 
 button:hover {
-    background-color: rgba(7, 169, 7, 0.929);
-    color: black;
+    background-color:#0077DA;
+    color: white;
     font-weight: bold;
 }
 
 .endline {
-    color: darkblue;
-    text-align: center;
+    text-align: center; 
 }
 
-.endline a {
-    text-decoration: none;
-    padding: 0 5px;
+.endline .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #0056b3; 
+    background-color: white; 
+    border: 2px solid #0056b3;
+    border-radius: 4px;
+    text-decoration: none; 
+    text-align: center; 
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-radius: 10px;
+    width: 85%;
 }
+
+.endline .btn:hover {
+    background-color: white; 
+}
+
 
 .logo {
     max-width: 91px;
@@ -287,7 +303,7 @@ button:hover {
             padding: 15px;
             border: none;
             border-radius: 12px;
-            background-color: green;
+            background-color: #0077DA;
             color: white;
             font-size: 17px;
             cursor: pointer;
