--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ button:hover {
     font-weight: bold;
     color: #0056b3; 
     background-color: white; 
-    border: 2px solid #0056b3;
+    /* border: 2px solid #0056b3; */
     border-radius: 4px;
     text-decoration: none; 
     text-align: center; 
