--- a/css/index_new.css
+++ b/css/index_new.css
@@ -121,7 +121,7 @@ li {
 .card {
     position: absolute;
     top: -3vh; 
-    left: 50%;
+    left: 43%;
     transform: translateX(-50%);
     width: 90%;
     max-width: 400px;
@@ -444,35 +444,366 @@ li {
     font-size: 8px;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+
+/* media query */
+
+@media only screen and (min-width: 768px) and (max-width: 768px) {
     #map {
         position: absolute;
-        top: 15vh;
+        top: 7.5vh;
         left: 0;
-        height: 76vh;
-        width: 108vw;
+        height: 84vh;
+        width: 97.6vw;
         z-index: 0;
         border-radius: 10px;
         padding: 10px;
         margin: 10px;
         border: 2px solid #0077DA;
+    }
+    .location-wrapper {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: -25px;
+        margin-left: 50px;
+    }
+    .location-icon {
+        background-color: #0077DA;
+        margin-left: 10px;
+        width: 28px;
+        height: 29px;
+        cursor: pointer;
+        border-radius: 50%;
+    }
+    .Geo img {
+        position: absolute;
+        z-index: 9999;
+        top: 0;
+        color: black;
+        height: 7dvh;
+        left: 10px;
+    }
+    .card {
+        position: absolute;
+        top: 10vh;
+        left: 26%;
+        transform: translateX(-50%);
+        width: 34%;
+        max-width: 400px;
+        z-index: 1;
+        display: none;
+        background-color: rgba(255, 255, 255, 0.9);
+        border: 2px solid #0077DA;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease;
+        font-size: 12px;
+    }
+    .message-container p {
+        font-size: 10px;
+        margin-bottom: -25px;
+        margin-left: 13pxpx;
+    }
+    .btn {
+        width: 50px; 
+        max-width: 95%;
+        height: 26px; 
+        justify-content: right;
+        background-color: #0077DA;
+        color: white;
+        top: 0px;
+        left: 92%;
+        position: absolute;
+        font-size: 10px;
+    }
+    .toggle-label {
+        display: block;
+        position: absolute;
+        width: 220%;
+        height: 100%;
+        background-color: #0077DA;
+        color: white;
+        top: 10px;
+        left: 71vw;
+        z-index: 1;
+        border-radius: 20px;
+        font-size: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1280px) {
+    #map {
+        position: absolute;
+        top: 7.5vh;
+        left: 0;
+        height: 84vh;
+        width: 98vw;
+        z-index: 0;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid #0077DA;
+    }
+    .location-wrapper {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: -25px;
+        margin-left: 50px;
+    }
+    .location-icon {
+        background-color: #0077DA;
+        margin-left: 10px;
+        width: 28px;
+        height: 29px;
+        cursor: pointer;
+        border-radius: 50%;
+    }
+    .Geo img {
+        position: absolute;
+        z-index: 9999;
+        top: 0;
+        color: black;
+        height: 7dvh;
+        left: 10px;
+    }
+    .card {
+        position: absolute;
+        top: 8vh;
+        left: 21%;
+        transform: translateX(-50%);
+        width: 27%;
+        max-width: 400px;
+        z-index: 1;
+        display: none;
+        background-color: rgba(255, 255, 255, 0.9);
     
-  }
-.message-container p {
-    font-size: 10px;
-    margin-bottom: -25px;
-    text-align: center;
+    }
+    .message-container p {
+        margin-bottom: -25px;
+        margin-left: -104px;
+    }
+    .btn {
+        width: 50px; 
+        max-width: 95%;
+        height: 26px; 
+        justify-content: right;
+        background-color: #0077DA;
+        color: white;
+        top: 0px;
+        left: 106%;
+        position: absolute;
+        font-size: 10px;
+    }
+    .toggle-label {
+        left: 77vw;
+    }
 }
-.btn {
-    width: 50;
-    max-width: 95%;
-    HEIGHT: 26px;
-    justify-content: right;
-    background-color: #0077DA;
-    color: white;
-    top: 0px;
-    left: 100%;
-    position: absolute;
-    font-size: 10px;
+
+@media only screen and (min-width: 1400px) {
+    #map {
+        position: absolute;
+        top: 7.5vh;
+        left: 0;
+        height: 85vh;
+        width: 98.5vw;
+        z-index: 0;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid #0077DA;
+    }
+    .location-wrapper {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: -25px;
+        margin-left: 50px;
+    }
+    .location-icon {
+        background-color: #0077DA;
+        margin-left: 10px;
+        width: 28px;
+        height: 29px;
+        cursor: pointer;
+        border-radius: 50%;
+    }
+    .Geo img {
+        position: absolute;
+        z-index: 9999;
+        top: 0;
+        color: black;
+        height: 7dvh;
+        left: 10px;
+    }
+    .card {
+        position: absolute;
+        top: 8vh;
+        left: 21%;
+        transform: translateX(-50%);
+        width: 27%;
+        max-width: 400px;
+        z-index: 1;
+        display: none;
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+    .message-container p {
+        margin-bottom: -25px;
+        margin-left: -311px;
+    }
+    .btn {
+        width: 50px;
+        max-width: 95%;
+        height: 26px;
+        justify-content: right;
+        background-color: #0077DA;
+        color: white;
+        top: 0px;
+        left: 132%;
+        position: absolute;
+        font-size: 10px;
+    }
+    .toggle-label {
+        left: 81vw;
+    }
 }
+
+@media only screen and (min-width: 1440px) {
+    #map {
+        position: absolute;
+        top: 7vh;
+        left: 0;
+        height: 86vh;
+        width: 98.5vw;
+        z-index: 0;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid #0077DA;
+    }
+    .location-wrapper {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: -25px;
+        margin-left: 50px;
+    }
+    .location-icon {
+        background-color: #0077DA;
+        margin-left: 10px;
+        width: 28px;
+        height: 29px;
+        cursor: pointer;
+        border-radius: 50%;
+    }
+    .Geo img {
+        position: absolute;
+        z-index: 9999;
+        top: 0;
+        color: black;
+        height: 7dvh;
+        left: 10px;
+    }
+    .card {
+        position: absolute;
+        top: 7vh;
+        left: 19%;
+        transform: translateX(-50%);
+        width: 20%;
+        max-width: 400px;
+        z-index: 1;
+        display: none;
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+    .message-container p {
+        margin-bottom: -25px;
+        margin-left: -337px;
+        font-size: 12px;
+       @media only screen and (min-width: 1500px) {
+    #map {
+        position: absolute;
+        top: 7vh;
+        left: 0;
+        height: 86vh;
+        width: 98.5vw;
+        z-index: 0;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid #0077DA;
+    }
+    .location-wrapper {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: -25px;
+        margin-left: 40px;
+    }
+    .location-icon {
+        background-color: #0077DA;
+        margin-left: 10px;
+        width: 28px;
+        height: 29px;
+        cursor: pointer;
+        border-radius: 50%;
+    }
+    .Geo img {
+        position: absolute;
+        z-index: 9999;
+        top: 0;
+        color: black;
+        height: 7dvh;
+        left: 10px;
+    }
+    .card {
+        position: absolute;
+        top: 8vh;
+        left: 21%;
+        transform: translateX(-50%);
+        width: 27%;
+        max-width: 400px;
+        z-index: 1;
+        display: none;
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+    .message-container p {
+        margin-bottom: -25px;
+        margin-left: -207px;
+    }
+    .btn {
+        width: 50px;
+        max-width: 95%;
+        height: 26px;
+        justify-content: right;
+        background-color: #0077DA;
+        color: white;
+        top: 0px;
+        left: 132%;
+        position: absolute;
+        font-size: 10px;
+    }
+    .toggle-label {
+        left: 81vw;
+    }
 }
+    }
+    .btn {
+        width: 50px;
+        max-width: 95%;
+        height: 30px;
+        justify-content: right;
+        background-color: #0077DA;
+        color: white;
+        top: 3px;
+        left: 135%;
+        position: absolute;
+        font-size: 10px;
+    }
+    .toggle-label {
+        left: 81vw;
+    }
+}
+
