--- a/css/index.css
+++ b/css/index.css
@@ -653,9 +653,10 @@ li {
 
 /* Media query for tablets */
 @media (min-width: 768px) and (max-width: 768px) {
+    
     #map {
         position: absolute;
-        top: 69PX;
+        top: 62PX;
         height: 91vh;
         width: 102vw;
         z-index: 0;
@@ -677,7 +678,7 @@ li {
         z-index: 1000;
         width: 32px;
         height: 32px;
-        left: 10px;
+        left: 18px;
     }
 
     .menu-bar img {
@@ -692,9 +693,9 @@ li {
     .Geo img {
         position: absolute;
         z-index: 9999;
-        top: 10px;
+        top: 3px;
         margin-bottom: 14px;
-        left: 4%;
+        left: 1%;
         color: black;
         height: 8dvh;
     }
@@ -720,7 +721,7 @@ li {
         text-shadow: #fff;
         font-size: 14px;
         margin-top: 13px;
-        margin-right: 20px;
+        margin-right: -2px;
     }
 
     li {
@@ -739,6 +740,7 @@ li {
         font-size: 10px ;
         margin-left: 210px;
     }
+    
 }
 
 
@@ -747,7 +749,7 @@ li {
 @media (min-width: 1024px) and (max-width: 1024px) {
     #map {
         position: absolute;
-        top: 62PX;
+        top: 61PX;
         /* left: 12px; */
         height: 91vh;
         width: 102vw;
@@ -784,9 +786,9 @@ li {
     .Geo img {
         position: absolute;
         z-index: 9999;
-        top: 12px;
+        top: 5px;
         margin-bottom: 14px;
-        left: 4%;
+        left: 0%;
         color: black;
         height: 8dvh;
     }
@@ -809,11 +811,10 @@ li {
         color: #0077DA;
         text-transform: uppercase;
         text-shadow: #fff;
-        font-size: 14px;
-        margin-top: 60px;
-        margin-right: 20px;
+        font-size: 15px;
+        margin-top: 9px;
+        margin-right: -24px;
     }
-
     
     li {
         list-style: none;
@@ -833,10 +834,105 @@ li {
     }
 }
 
+
+
+@media (min-width: 1100px) {
+    .leaflet-right {
+        right: 30px;
+    }
+    #map {
+        position: absolute;
+        top: 64PX;
+        height: 90vh;
+        width: 100vw;
+        z-index: 0;
+        border-radius: 5px;
+        box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);
+    }
+    .menu-bar {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+        border: 3px solid #0077da;
+        border-radius: 4px;
+        background-color: white;
+        cursor: pointer;
+        margin-top: 82px;
+        position: relative;
+        z-index: 1000;
+        width: 30px;
+        height: 31px;
+        left: 24px;
+    }
+
+    .menu-bar img {
+        top: 7px;
+        height: 20px;
+        width: 20px;
+        left: 5px;
+        border: none;
+        background-color: transparent;
+    }
+    .Geo img {
+        position: absolute;
+        z-index: 9999;
+        top: 3px;
+        margin-bottom: 14px;
+        left: 1%;
+        color: black;
+        height: 9dvh;
+        width: 79px;
+    }
+
+
+    .leaflet-top {
+        top: 37px;
+        margin-top: 0px;
+        right: 50px;;
+    }
+
+    .leaflet-retina .leaflet-control-layers-toggle {
+        background-image: url(./image/Layers_Icon.png);
+        background-size: 29px 29px;
+        border: 3px solid #0077da;
+        width: 29px;
+        border-radius: 5px;
+    }
+    #navbarDropdown {
+        font: 1rem;
+        color: #0077DA;
+        text-transform: uppercase;
+        text-shadow: #fff;
+        font-size: 16px;
+        margin-top: 15px;
+        margin-right: -30px;
+    }
+
+    
+    li {
+        list-style: none;
+        font-size: 13px;
+        right: -34px;
+    }
+
+    .contain-toggle {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+    .btn-close {
+        margin-top: 1opx ;
+        font-size: 10px ;
+        margin-left: 230px;
+    }   
+}
+
+
 @media (min-width: 1440px) and (max-width: 1440px) {
     #map {
         position: absolute;
-        top: 101PX;
+        top: 91PX;
         height: 90vh;
         width: 102vw;
         z-index: 0;
@@ -871,9 +967,9 @@ li {
     .Geo img {
         position: absolute;
         z-index: 9999;
-        top: 13px;
+        top: 6px;
         margin-bottom: 14px;
-        left: 2%;
+        left: 0%;
         color: black;
         height: 9dvh;
         width: 90px;
@@ -898,8 +994,8 @@ li {
         text-transform: uppercase;
         text-shadow: #fff;
         font-size: 23px;
-        margin-top: 28px;
-        margin-right: -30px;
+        margin-top: 11px;
+        margin-right: -52px;
     }
 
     
@@ -918,11 +1014,6 @@ li {
         margin-top: 1opx ;
         font-size: 10px ;
         margin-left: 230px;
-    }
-
-    .leaflet-touch .leaflet-control-layers-toggle {
-        width: 39px;
-        height: 36px;
-    }
-    
+    }   
 }
+
