--- a/css/terms_condition.css
+++ b/css/terms_condition.css
@@ -200,7 +200,7 @@ li {
 
 .profile .dropdown-item {
     padding: 10px 20px;
-    color: #0077DA;
+    color: black;
     text-decoration: none;
     display: block;
 }
