--- a/css/index_new.css
+++ b/css/index_new.css
@@ -16,10 +16,10 @@ body {
     display: none;
 }
 
-.dropdown-menu .dropdown-item:hover {
+/* .dropdown-menu .dropdown-item:hover {
     background-color: #0080005c;
     color: white;
-}
+} */
 
 .btn.next-button {
     background-color: #0077DA;
@@ -49,6 +49,7 @@ border: 3px solid #0077DA;
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
+    border: 2px solid #0077DA;
 }
 
 
@@ -121,7 +122,7 @@ li {
 .card {
     position: absolute;
     top: -3vh; 
-    left: 43%;
+    left: 44%;
     transform: translateX(-50%);
     width: 90%;
     max-width: 400px;
@@ -486,7 +487,7 @@ li {
     }
     .card {
         position: absolute;
-        top: 10vh;
+        top: 7.4vh;
         left: 26%;
         transform: translateX(-50%);
         width: 34%;
@@ -572,7 +573,7 @@ li {
     }
     .card {
         position: absolute;
-        top: 8vh;
+        top: 7vh;
         left: 21%;
         transform: translateX(-50%);
         width: 27%;
@@ -641,7 +642,7 @@ li {
     }
     .card {
         position: absolute;
-        top: 8vh;
+        top: 5vh;
         left: 21%;
         transform: translateX(-50%);
         width: 27%;
@@ -709,8 +710,8 @@ li {
     }
     .card {
         position: absolute;
-        top: 7vh;
-        left: 19%;
+        top: 6.3vh;
+        left: 18%;
         transform: translateX(-50%);
         width: 20%;
         max-width: 400px;
@@ -725,7 +726,7 @@ li {
        @media only screen and (min-width: 1500px) {
     #map {
         position: absolute;
-        top: 7vh;
+        top: 6vh;
         left: 0;
         height: 86vh;
         width: 98.5vw;
